MODDCB-234: Add localNames support for DcbPatron